# stratification-app

./: .pre-commit-config.yaml  .travis.yml  Pipfile  README.md  cli.py  hook-mip.py  notes.md  pyproject.toml  script.py  script.py~  sf_stratification_settings.toml  sf_stratification_settings.txt  stratification.py  stratification.py~  test_end_to_end.py  test_stratification.py
.github/: dependabot.yml
.github/workflows/: build-executables.yml  release--executables.yml  release-executables.yml  release-windows-executable.yml  run-tests.yml
docs/: index.md
fixtures/: candidates.csv  categories.csv
pyinstallerhooks/: hook-mip.py
web/: main.html  main.html~  main_old.html
web/js/: main.js  main.js~
