[project]
name = "stratification-app"
version = "0.1.0"
description = "Application to select people from a spreadsheet according to given categories"
authors = [
  "Nick Gill <nick@sortitionfoundation.org>", 
  "Brett Hennig <brett@sortitionfoundation.org>",
  "Paul Goelz <mail@paulgoelz.de>"
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cvxpy==1.5.3",
    "Eel==0.17.0",
    "gspread==6.1.4",
    "mip==1.15.0",
    "oauth2client==4.1.3",
    "pyinstaller==6.11.1",
    "toml==0.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
