[project]
name = "stratification-app"
version = "0.1.0"
description = "Application to select people from a spreadsheet according to given categories"
authors = [
  "Nick Gill <nick@sortitionfoundation.org>",
  "Brett Hennig <brett@sortitionfoundation.org>",
  "Paul Goelz <mail@paulgoelz.de>",
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "Eel==0.18.2",
  "oauth2client<5",
  "pyinstaller<7",
  "sortition-algorithms==0.10.3",
  "toml",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "ruff>=0.9.7"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

# eel does not have type hints/stubs
[[tool.mypy.overrides]]
module = "eel.*"
ignore_missing_imports = true
ignore_errors = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  # "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  # TODO: reinstate this
  "B017",    # assertRaises(Exception)
  "BLE001",  # don't catch Exception
  "C901",    # too complex
  "FBT001",  # positional boolean arg in function defn
  "PLR0912", # too many branches
  "PLR0913", # too many args in function defn
  "PLR0915", # too many statements
  "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
  "S101",    # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "S311",    # pseudo-random - it's not security
  "SIM102",  # sometimes it's better to nest
  "T201",    # `print` found - fine to use it for now
  "TRY301",  # abstract raise to an inner function
  "UP038",   # Checks for uses of isinstance/issubclass that take a tuple
  # of types for comparison.
  # Deactivated because it can make the code slow:
  # https://github.com/astral-sh/ruff/issues/7871
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = ["UP038"]

#[tool.ruff.per-file-ignores]
[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
  # at least these should be fine in tests:
  "S101", # asserts allowed in tests...
  "S106", # hardcoded passwords
  "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  # The below are debateable
  "PLR2004", # Magic value used in comparison, ...
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]
"**/tests/*" = [
  # at least these should be fine in tests:
  "S101", # asserts allowed in tests...
  "S106", # hardcoded passwords
  "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  # The below are debateable
  "PLR2004", # Magic value used in comparison, ...
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.lint.isort]
force-single-line = false
